# glider

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Constants.h  EndScreenAnimState.h  FileBrowser.cpp  FileBrowser.h  HouseReader.cpp  HouseReader.h  ObjectKey.h  ObjectType.h  Preferences.h  README.md  Renderer.cpp  Resources.cpp  Resources.h  SoundResources.cpp  THIRD_PARTY_LICENSES  The House  The House 2  TitleScreen.cpp  TitleScreen.h  WindowGeometry.h  main.cpp  vcpkg.json
.github/workflows/: build.yml
editor/: Editor.cpp  Editor.h  main_editor.cpp
fonts/: GlyphsSans.h
macos/: glider.icns
src/: Colors.h  FileBrowser.cpp  FileBrowser.h  Game.cpp  Game.h  GameOverState.h  GameState.h  HouseData.h  HouseProgress.h  HouseWriter.cpp  HouseWriter.h  PlayerProgress.h  PlayerState.h  Preferences.cpp  Preferences.h  Random.h  Rect.h  Renderer.h  SoundResources.cpp  SoundResources.h  TitleScreen.cpp  TitleScreen.h  main.cpp
src/editor/: Editor.cpp  ProcessLauncher.cpp  ProcessLauncher.h  main_editor.cpp
triplets/: arm64-osx-static.cmake
